module name changes (#10)
Signed-off-by: Jyoti Rani <jyotirani10@in.ibm.com>

--- a/module.yaml
+++ b/module.yaml
@@ -1,4 +1,4 @@
-name: gitops-cp-eventstreams-operator
+name: gitops-cp-es-operator
 type: terraform
 description: Module to populate a gitops repository with the resources to provision the Event Streams operator from IBM Cloud Pak for Integration.
 tags:
