--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -13,13 +13,14 @@ jobs:
     with:
       testcase: ocp4_latest_gitops_cp4i #azure_latest_gitops
     secrets:
-      GIT_ORG: ${{ secrets.GIT_ORG }}
+      # GIT_ORG: ${{ secrets.GIT_ORG }}
       AWS_CLUSTER_USERNAME: ${{ secrets.AWS_CLUSTER_USERNAME }}
       AWS_CLUSTER_PASSWORD: ${{ secrets.AWS_CLUSTER_PASSWORD }}
       IBMCLOUD_API_KEY: ${{ secrets.IBMCLOUD_API_KEY }}
-      GIT_ADMIN_USERNAME: ${{ secrets.GIT_ADMIN_USERNAME }}
-      GIT_ADMIN_TOKEN: ${{ secrets.GIT_ADMIN_TOKEN }}
+      # GIT_ADMIN_USERNAME: ${{ secrets.GIT_ADMIN_USERNAME }}
+      # GIT_ADMIN_TOKEN: ${{ secrets.GIT_ADMIN_TOKEN }}
       CP_ENTITLEMENT_KEY: ${{ secrets.CP_ENTITLEMENT_KEY }}
+
 
   verifyMetadata:
     uses: cloud-native-toolkit/action-workflows/.github/workflows/verify-module-metadata.yaml@v1
@@ -29,3 +30,4 @@ jobs:
     uses: cloud-native-toolkit/action-workflows/.github/workflows/release-module.yaml@v1
     secrets:
       TOKEN: ${{ secrets.TOKEN }}
+
